--- a/app/src/main/res/layout/movie_sample_card.xml
+++ b/app/src/main/res/layout/movie_sample_card.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -13,36 +13,36 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_margin="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="7.5dp"
+                android:layout_centerHorizontal="true"
                 android:id="@+id/imageMovieBg"
                 android:contentDescription="@string/app_name"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/imageMovieBg"
-                android:layout_toRightOf="@+id/imageMovieBg"
                 android:text="Movie Title"
                 android:textColor="#000"
                 android:textStyle="bold"
                 android:textSize="18sp"
                 android:id="@+id/textMovieTitle"
-                android:layout_toEndOf="@+id/imageMovieBg" />
+                android:layout_below="@+id/imageMovieBg"
+                android:layout_marginStart="7.5dp"
+                android:layout_marginLeft="7.5dp"
+                android:layout_marginBottom="5dp" />
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/textMovieTitle"
-                android:layout_toEndOf="@+id/textMovieTitle"
                 android:layout_below="@+id/textMovieTitle"
-                android:layout_alignStart="@+id/textMovieTitle"
+                android:id="@+id/textMovieOverview"
+                android:layout_marginStart="7.5dp"
+                android:layout_marginLeft="7.5dp"
+                android:layout_marginBottom="5dp"
                 android:layout_marginEnd="7.5dp"
-                android:layout_marginRight="7.5dp"
-                android:layout_alignLeft="@+id/textMovieTitle"
-                android:layout_marginBottom="10dp"
-                android:id="@+id/textMovieOverview"/>
+                android:layout_marginRight="7.5dp" />
 
         </RelativeLayout>
 
